# ariadna

./: .gitignore  LICENSE  README.md  pyproject.toml
ariadna/: __init__.py  build_index.py  config.py  embeddings.py  mcp_server.py  parsers.py  policy_filters.py  reranker.py  search.py  semantic_recovery.py  storage.py  wiki_utils.py
data/eval/: queries_eval_v1.jsonl  queries_eval_v2.jsonl  results_v1.md  results_v2.md
docs/: AGENT_HANDOFF_2026-05-16.md  ARCHITECTURE.md  CORPUS_COVERAGE_STRATEGY.md  EXTRACTION_PIPELINE.md  INTEGRACION_MATTERMOST.md  NEXT_SESSION.md  PHASES.md  PIPELINE_REFACTOR_2026_05_02.md  POSTMORTEM_2026-05-02.md  RERANKER.md  RESPONSE_FLOW.md  SESSION_CONTEXT.md  TAXONOMY_PROPOSAL.md  WIKI_GENERATION.md  run_pipeline.md
scripts/: agent_resume_prompt.md  apply_pending_updates.py  bootstrap_taxonomy.py  build_wiki_db.py  compile_wiki_pages.py  extract_incremental.py  extract_video_themes.py  index_wiki_to_qdrant.py  overnight_run.py  rank_wiki_candidates.py  resume_plan_chunks_2_9.sh  run_eval_pilot.py  run_pilot_v2.py  run_server.sh  run_tunnel.sh  scan_mentions_ledger.py  semantic_recovery.py  test_call.sh  test_hybrid.py  validate_wiki_relations.py
wiki/: README.md
wiki/_meta/: INDEX.md  canonical_whitelist.json  next_batch_ranking.json  processed_videos.json  relation_types.json  scope.md  semantic_recovery_cache.json  topic_filters.json  wiki_control.json
wiki/authors/: asimov-isaac.md  borges-jorge-luis.md  bueno-gustavo.md  campbell-joseph.md  clarke-arthur-c.md  eliade-mircea.md  frazer-james-george.md  freud-sigmund.md  (+8 more)
(+756 files in other folders)
