[project]
name = "ariadna"
version = "0.1.0"
description = "Asistente conversacional con acceso al corpus del canal Proxy via MCP"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Sangaroth" },
]

dependencies = [
    # Retrieval y embeddings
    "sentence-transformers>=3.0",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    # MCP server sobre HTTP
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Utilidades
    "pydantic>=2.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
ariadna-index = "ariadna.build_index:main"
ariadna-server = "ariadna.mcp_server:main"
ariadna-search = "ariadna.search:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ariadna"]

[tool.ruff]
line-length = 100
target-version = "py313"
